Added a div to the site. Still experimenting with layouts and Bootstrap

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,11 +1,11 @@
 .navbar{
 	
 	border-radius: 0 !important;
-	background-color: #FF0000 !important;
+	margin-bottom: 0!important;
 	
 }
 
-body {
-
-	background-color: red;
+.Profile {
+	background: linear-gradient(to bottom right,black,grey);
+	color:#FFFFFF;
 }
