--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 .navbar {
   border-radius: 0 !important;
-  background-color: #FF0000 !important; }
+  margin-bottom: 0 !important; }
 
-body {
-  background-color: red; }
+.Profile {
+  background: linear-gradient(to bottom right, black, grey);
+  color: #FFFFFF; }
