Added certifications, minor code refactoring

--- a/css/index.css
+++ b/css/index.css
@@ -1,33 +1,33 @@
+body {
+  padding-top: 50px; }
+
 .navbar {
-  border-radius: 0 !important;
-  font-family: 'Roboto', sans-serif !important; }
+  font-family: 'Roboto', sans-serif; }
 
 .Profile {
   background: #4BB748;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: 'Roboto', sans-serif;
   font-size: 13px;
-  height: 500px;
   color: #FFFFFF;
-  margin-top: 30px;
   padding-top: 10px; }
 
 .MyQual {
   background: #474e5d;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: 'Roboto', sans-serif;
   font-size: 13px;
-  height: 500px;
   color: #FFFFFF; }
 
-.PubRepo {
+.Repo {
   background: #E8AD0C;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: 'Roboto', sans-serif;
   font-size: 13px;
-  height: 500px;
   color: #FFFFFF; }
 
 .Resume {
   background: #E8640C;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: 'Roboto', sans-serif;
   font-size: 13px;
-  height: 500px;
   color: #FFFFFF; }
+
+.carousel {
+  margin-bottom: 60px; }
