--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+/* Smaller than standard 960 (devices and browsers) */
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+/* All Mobile Sizes (devices and browser) */
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 body {
   padding-top: 50px; }
 
@@ -21,9 +26,10 @@ body {
   background: #E8AD0C;
   font-family: 'Roboto', sans-serif;
   font-size: 13px;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  padding-bottom: 60px; }
 
-.Resume {
+.Technologies {
   background: #E8640C;
   font-family: 'Roboto', sans-serif;
   font-size: 13px;
